<resources>
    <string name="app_name">Beep</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label"><font color="@color/black">My List</font></string>
    <string name="second_fragment_label">Profile</string>
    <string name="product_review_label">Product Review</string>
    <string name="substitute_label">Substitutes</string>
    <string name="settings">Settings</string>
    <string name="item">Item</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back_button_text">Home</string>
    <string name="edit_button_text">edit</string>
    <string name="profile_screen_header">important restrictions</string>
    <string name="user_name">Insert your name</string>
    <string name="pronouns">pronouns</string>
    <string name="add_person_cue">Add Person</string>
    <string name="edit_restrictions_cue">Modify restrictions</string>
    <string name="icong_group_desc">Edit people button</string>
    <string name="icon_back_desc">Back</string>
    <string name="icon_help_desc">Display help menu</string>
    <string name="qty">"Qty: "</string>
    <string name="done">done</string>
    <string name="substitutes">"Substitutes: "</string>
    <string name="shopping_question">"Who are you shopping for?"</string>
    <string name="help">"Help:"</string>
    <string name="faq">"FAQ:"</string>
    <string name="qna">"Q: How do you add a person?\nA: Navigate to the profile screen and click the \"Add Person\" button.\n\nQ: How do you edit the restrictions of a person?\nA: Navigate to the profile screen and click the \"Modify Restrictions\" button.\n\nQ: What does the star mean?\nA: Starring a restriction means that it is very important. For example, you would star a severe peanut allergy, but probably not a mild lactose intolerance."</string>

    <string name="myself">"Myself</string>
    <string name="allie">"Allie</string>
    <string name="jim">"Jim</string>
    <string name="alex">"Alex</string>
    <string name="sarah">"Sarah</string>

    <string name="name_prompt">Name:</string>
    <string name="submit_cue">SUBMIT</string>
    <string name="add_restriction_cue">Add Restriction</string>
    <string name="add_restriction_popup_cue">Select one:</string>
    <string name="remove_user_popup_cue">Current users:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_substitute">find substitute</string>
    <string name="ingredients">ingredients</string>
    <string name="add_to_list">Add To List</string>
    <string name="edit_restrictions_done">Done</string>
    <string name="description">description</string>
    <string name="product_review">Product Review</string>
</resources>