<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_button_text"
                android:drawableLeft="@drawable/icon_back_button"
                android:drawableTint="@color/black"
                android:contentDescription="@string/icon_back_desc"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"
                />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_help"
                android:contentDescription="@string/icon_help_desc"
                android:backgroundTint="@color/white"
                android:tint="@color/black"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_group"
                android:contentDescription="@string/icong_group_desc"
                android:backgroundTint="@color/white"
                android:tint="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingTop="15dp">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/icon_person"
                android:scaleType="fitXY"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:paddingTop="20dp"
                    android:text="@string/user_name"></EditText>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:paddingTop="20dp"
                    android:text="@string/pronouns"></EditText>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <!-- todo: change layout_height to wrap_content -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Me:"
                android:textSize="18dp" />

            <ListView
                android:id="@+id/user1_list"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:paddingBottom="5dp"
            android:orientation="vertical"
            android:gravity="center|bottom">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_restrictions_cue"
                android:drawableLeft="@drawable/icon_edit_button"
                android:textAllCaps="false"
                android:backgroundTint="@color/cardview_dark_background"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_person_cue"
                android:drawableLeft="@drawable/icon_add_person"
                android:textAllCaps="false"
                android:backgroundTint="@color/gray"
                />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
    <!--                android:backgroundTint="@color/teal_200"-->
