<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<!--    <ImageButton-->
<!--        android:id="@+id/done_faq"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:textColor="@color/off_white"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:src="@drawable/ic_cancel"-->
<!--        android:layout_gravity="right"-->
<!--        android:onClick="saveChecklist"/>-->
    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textSize="35dp"
        android:textColor="@color/black"
        android:ems="10"
        android:text="@string/help"/>
    <TextView
        android:id="@+id/freqAskedQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:ems="10"
        android:text="@string/faq"/>
    <TextView android:id="@+id/qna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/qna"
        android:buttonTint="@color/teal"
        android:onClick="onCheckboxClicked"
        android:checked="true"/>
</LinearLayout>