<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/light_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back_btn"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/icon_back_desc"
                android:backgroundTint="@color/white"
                app:tint="@color/teal"
                app:fabSize="mini"
                app:rippleColor="@color/teal"
                />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/help_btn"
                android:src="@drawable/ic_help"
                android:contentDescription="@string/icon_help_desc"
                android:backgroundTint="@color/white"
                app:tint="@color/teal"
                app:fabSize="mini"
                app:rippleColor="@color/teal"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profiles_btn"
                android:src="@drawable/ic_group"
                android:contentDescription="@string/icong_group_desc"
                android:backgroundTint="@color/white"
                app:tint="@color/teal"
                app:fabSize="mini"
                app:rippleColor="@color/teal"
                />
        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/inset_profile_card"
            android:backgroundTint="@color/dark_mid_gray">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="50dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/user_picture"
                    android:src="@drawable/ic_person"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="10dp"
                android:layout_height="0dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username_edit"
                android:textSize="18dp"
                android:paddingTop="18dp"
                android:textColor="@color/black"
                android:text="@string/user_name"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restrictions_linear_layout"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp">

            <!-- todo: change layout_height to wrap_content -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:listitem="@layout/user_recyclerview_item"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:paddingBottom="5dp"
            android:orientation="vertical"
            android:gravity="center|bottom">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modify_btn"
                android:text="@string/edit_restrictions_cue"
                android:textColor="@color/off_white"
                android:drawableLeft="@drawable/ic_edit"
                android:textAllCaps="false"
                app:cornerRadius="100dp"
                android:backgroundTint="@color/red"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_person_btn"
                android:text="@string/add_person_cue"
                android:textColor="@color/off_white"
                android:drawableLeft="@drawable/ic_add_person"
                android:textAllCaps="false"
                app:cornerRadius="100dp"
                android:backgroundTint="@color/teal" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
    <!--                android:backgroundTint="@color/teal_200"-->